[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Fonts/SmallCursive.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Styles/LighterBackground.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Textures/Shikashi's Texture Pack Subset/coin.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/Shikashi's Texture Pack Subset/heart.png" type="Texture" id=6]
[ext_resource path="res://Resources/Textures/Shikashi's Texture Pack Subset/treasure.png" type="Texture" id=7]
[ext_resource path="res://Scripts/QuestNote.gd" type="Script" id=8]

[node name="QuestNote" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -719.0
margin_bottom = -423.0
rect_min_size = Vector2( 305, 177 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 305.0
margin_bottom = 177.0
rect_min_size = Vector2( 305, 177 )
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="Panel"]
margin_left = 5.0
margin_top = 2.0
margin_right = 296.0
margin_bottom = 90.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] name [center]"
text = " name "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirementsGrid" type="GridContainer" parent="Panel"]
margin_left = 3.85111
margin_top = 84.0697
margin_right = 71.8511
margin_bottom = 124.069
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirementsLabel" type="Label" parent="Panel"]
margin_left = 3.91757
margin_top = 67.4746
margin_right = 97.9176
margin_bottom = 81.4746
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Requirements:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardsLabel" type="Label" parent="Panel"]
margin_left = 4.64238
margin_top = 122.652
margin_right = 57.6424
margin_bottom = 136.652
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rewards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardsGrid" type="GridContainer" parent="Panel"]
margin_left = 5.35336
margin_top = 136.587
margin_right = 109.354
margin_bottom = 176.587
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyIcon" type="TextureRect" parent="Panel/RewardsGrid"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="SocialIcon" type="TextureRect" parent="Panel/RewardsGrid"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="SpecialIcon" type="TextureRect" parent="Panel/RewardsGrid"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 7 )

[node name="Accept" type="Button" parent="Panel"]
margin_left = 196.652
margin_top = 136.275
margin_right = 289.652
margin_bottom = 172.275
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}
